--- a/index.html
+++ b/index.html
@@ -126,5 +126,240 @@
         </ul>
       </div>
     </section>
+    <main class="projects">
+      <h2>Your Projects</h2>
+
+      <div class="project">
+        <h3>super cool project</h3>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet enim
+          sint iusto magni optio veritatis temporibus vitae nostrum voluptas
+          tenetur?
+        </p>
+        <div class="project--buttons">
+          <button>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+              <title>star-four-points-outline</title>
+              <path
+                d="M12,6.7L13.45,10.55L17.3,12L13.45,13.45L12,17.3L10.55,13.45L6.7,12L10.55,10.55L12,6.7M12,1L9,9L1,12L9,15L12,23L15,15L23,12L15,9L12,1Z" />
+            </svg></button
+          ><button>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+              <title>eye-check</title>
+              <path
+                d="M23.5,17L18.5,22L15,18.5L16.5,17L18.5,19L22,15.5L23.5,17M12,9A3,3 0 0,1 15,12A3,3 0 0,1 12,15A3,3 0 0,1 9,12A3,3 0 0,1 12,9M12,17C12.5,17 12.97,16.93 13.42,16.79C13.15,17.5 13,18.22 13,19V19.45L12,19.5C7,19.5 2.73,16.39 1,12C2.73,7.61 7,4.5 12,4.5C17,4.5 21.27,7.61 23,12C22.75,12.64 22.44,13.26 22.08,13.85C21.18,13.31 20.12,13 19,13C18.22,13 17.5,13.15 16.79,13.42C16.93,12.97 17,12.5 17,12A5,5 0 0,0 12,7A5,5 0 0,0 7,12A5,5 0 0,0 12,17Z" />
+            </svg></button
+          ><button>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+              <title>share-all</title>
+              <path
+                d="M11 9V5L18 12L11 19V14.9C6 14.9 2.5 16.5 0 20C1 15 4 10 11 9M17 8V5L24 12L17 19V16L21 12L17 8Z" />
+            </svg>
+          </button>
+        </div>
+      </div>
+      <div class="project">
+        <h3>super cool project</h3>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet enim
+          sint iusto magni optio veritatis temporibus vitae nostrum voluptas
+          tenetur?
+        </p>
+        <div class="project--buttons">
+          <button>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+              <title>star-four-points-outline</title>
+              <path
+                d="M12,6.7L13.45,10.55L17.3,12L13.45,13.45L12,17.3L10.55,13.45L6.7,12L10.55,10.55L12,6.7M12,1L9,9L1,12L9,15L12,23L15,15L23,12L15,9L12,1Z" />
+            </svg></button
+          ><button>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+              <title>eye-check</title>
+              <path
+                d="M23.5,17L18.5,22L15,18.5L16.5,17L18.5,19L22,15.5L23.5,17M12,9A3,3 0 0,1 15,12A3,3 0 0,1 12,15A3,3 0 0,1 9,12A3,3 0 0,1 12,9M12,17C12.5,17 12.97,16.93 13.42,16.79C13.15,17.5 13,18.22 13,19V19.45L12,19.5C7,19.5 2.73,16.39 1,12C2.73,7.61 7,4.5 12,4.5C17,4.5 21.27,7.61 23,12C22.75,12.64 22.44,13.26 22.08,13.85C21.18,13.31 20.12,13 19,13C18.22,13 17.5,13.15 16.79,13.42C16.93,12.97 17,12.5 17,12A5,5 0 0,0 12,7A5,5 0 0,0 7,12A5,5 0 0,0 12,17Z" />
+            </svg></button
+          ><button>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+              <title>share-all</title>
+              <path
+                d="M11 9V5L18 12L11 19V14.9C6 14.9 2.5 16.5 0 20C1 15 4 10 11 9M17 8V5L24 12L17 19V16L21 12L17 8Z" />
+            </svg>
+          </button>
+        </div>
+      </div>
+      <div class="project">
+        <h3>super cool project</h3>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet enim
+          sint iusto magni optio veritatis temporibus vitae nostrum voluptas
+          tenetur?
+        </p>
+        <div class="project--buttons">
+          <button>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+              <title>star-four-points-outline</title>
+              <path
+                d="M12,6.7L13.45,10.55L17.3,12L13.45,13.45L12,17.3L10.55,13.45L6.7,12L10.55,10.55L12,6.7M12,1L9,9L1,12L9,15L12,23L15,15L23,12L15,9L12,1Z" />
+            </svg></button
+          ><button>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+              <title>eye-check</title>
+              <path
+                d="M23.5,17L18.5,22L15,18.5L16.5,17L18.5,19L22,15.5L23.5,17M12,9A3,3 0 0,1 15,12A3,3 0 0,1 12,15A3,3 0 0,1 9,12A3,3 0 0,1 12,9M12,17C12.5,17 12.97,16.93 13.42,16.79C13.15,17.5 13,18.22 13,19V19.45L12,19.5C7,19.5 2.73,16.39 1,12C2.73,7.61 7,4.5 12,4.5C17,4.5 21.27,7.61 23,12C22.75,12.64 22.44,13.26 22.08,13.85C21.18,13.31 20.12,13 19,13C18.22,13 17.5,13.15 16.79,13.42C16.93,12.97 17,12.5 17,12A5,5 0 0,0 12,7A5,5 0 0,0 7,12A5,5 0 0,0 12,17Z" />
+            </svg></button
+          ><button>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+              <title>share-all</title>
+              <path
+                d="M11 9V5L18 12L11 19V14.9C6 14.9 2.5 16.5 0 20C1 15 4 10 11 9M17 8V5L24 12L17 19V16L21 12L17 8Z" />
+            </svg>
+          </button>
+        </div>
+      </div>
+      <div class="project">
+        <h3>super cool project</h3>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet enim
+          sint iusto magni optio veritatis temporibus vitae nostrum voluptas
+          tenetur?
+        </p>
+        <div class="project--buttons">
+          <button>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+              <title>star-four-points-outline</title>
+              <path
+                d="M12,6.7L13.45,10.55L17.3,12L13.45,13.45L12,17.3L10.55,13.45L6.7,12L10.55,10.55L12,6.7M12,1L9,9L1,12L9,15L12,23L15,15L23,12L15,9L12,1Z" />
+            </svg></button
+          ><button>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+              <title>eye-check</title>
+              <path
+                d="M23.5,17L18.5,22L15,18.5L16.5,17L18.5,19L22,15.5L23.5,17M12,9A3,3 0 0,1 15,12A3,3 0 0,1 12,15A3,3 0 0,1 9,12A3,3 0 0,1 12,9M12,17C12.5,17 12.97,16.93 13.42,16.79C13.15,17.5 13,18.22 13,19V19.45L12,19.5C7,19.5 2.73,16.39 1,12C2.73,7.61 7,4.5 12,4.5C17,4.5 21.27,7.61 23,12C22.75,12.64 22.44,13.26 22.08,13.85C21.18,13.31 20.12,13 19,13C18.22,13 17.5,13.15 16.79,13.42C16.93,12.97 17,12.5 17,12A5,5 0 0,0 12,7A5,5 0 0,0 7,12A5,5 0 0,0 12,17Z" />
+            </svg></button
+          ><button>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+              <title>share-all</title>
+              <path
+                d="M11 9V5L18 12L11 19V14.9C6 14.9 2.5 16.5 0 20C1 15 4 10 11 9M17 8V5L24 12L17 19V16L21 12L17 8Z" />
+            </svg>
+          </button>
+        </div>
+      </div>
+      <div class="project">
+        <h3>super cool project</h3>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet enim
+          sint iusto magni optio veritatis temporibus vitae nostrum voluptas
+          tenetur?
+        </p>
+        <div class="project--buttons">
+          <button>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+              <title>star-four-points-outline</title>
+              <path
+                d="M12,6.7L13.45,10.55L17.3,12L13.45,13.45L12,17.3L10.55,13.45L6.7,12L10.55,10.55L12,6.7M12,1L9,9L1,12L9,15L12,23L15,15L23,12L15,9L12,1Z" />
+            </svg></button
+          ><button>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+              <title>eye-check</title>
+              <path
+                d="M23.5,17L18.5,22L15,18.5L16.5,17L18.5,19L22,15.5L23.5,17M12,9A3,3 0 0,1 15,12A3,3 0 0,1 12,15A3,3 0 0,1 9,12A3,3 0 0,1 12,9M12,17C12.5,17 12.97,16.93 13.42,16.79C13.15,17.5 13,18.22 13,19V19.45L12,19.5C7,19.5 2.73,16.39 1,12C2.73,7.61 7,4.5 12,4.5C17,4.5 21.27,7.61 23,12C22.75,12.64 22.44,13.26 22.08,13.85C21.18,13.31 20.12,13 19,13C18.22,13 17.5,13.15 16.79,13.42C16.93,12.97 17,12.5 17,12A5,5 0 0,0 12,7A5,5 0 0,0 7,12A5,5 0 0,0 12,17Z" />
+            </svg></button
+          ><button>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+              <title>share-all</title>
+              <path
+                d="M11 9V5L18 12L11 19V14.9C6 14.9 2.5 16.5 0 20C1 15 4 10 11 9M17 8V5L24 12L17 19V16L21 12L17 8Z" />
+            </svg>
+          </button>
+        </div>
+      </div>
+      <div class="project">
+        <h3>super cool project</h3>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet enim
+          sint iusto magni optio veritatis temporibus vitae nostrum voluptas
+          tenetur?
+        </p>
+        <div class="project--buttons">
+          <button>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+              <title>star-four-points-outline</title>
+              <path
+                d="M12,6.7L13.45,10.55L17.3,12L13.45,13.45L12,17.3L10.55,13.45L6.7,12L10.55,10.55L12,6.7M12,1L9,9L1,12L9,15L12,23L15,15L23,12L15,9L12,1Z" />
+            </svg></button
+          ><button>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+              <title>eye-check</title>
+              <path
+                d="M23.5,17L18.5,22L15,18.5L16.5,17L18.5,19L22,15.5L23.5,17M12,9A3,3 0 0,1 15,12A3,3 0 0,1 12,15A3,3 0 0,1 9,12A3,3 0 0,1 12,9M12,17C12.5,17 12.97,16.93 13.42,16.79C13.15,17.5 13,18.22 13,19V19.45L12,19.5C7,19.5 2.73,16.39 1,12C2.73,7.61 7,4.5 12,4.5C17,4.5 21.27,7.61 23,12C22.75,12.64 22.44,13.26 22.08,13.85C21.18,13.31 20.12,13 19,13C18.22,13 17.5,13.15 16.79,13.42C16.93,12.97 17,12.5 17,12A5,5 0 0,0 12,7A5,5 0 0,0 7,12A5,5 0 0,0 12,17Z" />
+            </svg></button
+          ><button>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+              <title>share-all</title>
+              <path
+                d="M11 9V5L18 12L11 19V14.9C6 14.9 2.5 16.5 0 20C1 15 4 10 11 9M17 8V5L24 12L17 19V16L21 12L17 8Z" />
+            </svg>
+          </button>
+        </div>
+      </div>
+    </main>
+    <section class="rightside">
+      <div class="announce">
+        <h3>Announcements</h3>
+        <div class="announcebox">
+          <div class="announce--item">
+            <h4>Site Maintenance</h4>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing sint aut quod!
+            </p>
+          </div>
+          <div class="announce--item">
+            <h4>Site Maintenance</h4>
+            <p>elit. Debitis eligendi consectetur eum sint aut quod!</p>
+          </div>
+          <div class="announce--item">
+            <h4>Site Maintenance</h4>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur consectetur eum sint aut
+              quod!
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="trend">
+        <h3>Trending</h3>
+        <div class="trendbox">
+          <div class="trend--item">
+            <img src="" alt="" />
+            <div class="trend--item-text">
+              <h5>@tegan</h5>
+              <p>world peace maker</p>
+            </div>
+          </div>
+          <div class="trend--item">
+            <img src="" alt="" />
+            <div class="trend--item-text">
+              <h5>@tegan</h5>
+              <p>world peace maker</p>
+            </div>
+          </div>
+          <div class="trend--item">
+            <img src="" alt="" />
+            <div class="trend--item-text">
+              <h5>@tegan</h5>
+              <p>world peace maker</p>
+            </div>
+          </div>
+          <div class="trend--item">
+            <img src="" alt="" />
+            <div class="trend--item-text">
+              <h5>@tegan</h5>
+              <p>world peace maker</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
